[package]
name = "udiskr"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"

[dependencies]
futures = { version = "0.3.31", default-features = false, features = [
  "executor",
] }
rustc-hash = { version = "2.1.1", default-features = false }
zbus = { version = "5.7.0", default-features = false, features = ["async-io"] }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
